--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -413,6 +413,7 @@ config  ARCH_MSM_KRAITMP
 	select MSM_SMP
 	select HAVE_ARCH_HAS_CURRENT_TIMER
 	select MSM_JTAG if CORESIGHT_ETM
+	select HAVE_HW_BREAKPOINT
 	bool
 	select HAVE_HW_BRKPT_RESERVED_RW_ACCESS
 
