Enable capacitive key

--- a/arch/arm/configs/geeb_defconfig
+++ b/arch/arm/configs/geeb_defconfig
@@ -39,6 +39,7 @@ CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
 CONFIG_MACH_MSM_DUMMY=y
 CONFIG_BOARD_HEADER_FILE="mach/lge/board_mako.h"
 CONFIG_MACH_APQ8064_MAKO=y
+CONFIG_MACH_APQ8064_J1A=y
 CONFIG_LGE_CRASH_HANDLER=y
 CONFIG_LGE_QFPROM_INTERFACE=y
 CONFIG_UPDATE_LCDC_LUT=y
@@ -302,6 +303,8 @@ CONFIG_KEYBOARD_PMIC8XXX=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_LGE_SYNAPTICS=y
+CONFIG_TOUCH_REG_MAP_TM2000=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
 CONFIG_TOUCHSCREEN_CHARGER_NOTIFY=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PMIC8XXX_PWRKEY=y
