--- a/arch/arm/configs/geehrc_defconfig
+++ b/arch/arm/configs/geehrc_defconfig
@@ -3001,7 +3001,7 @@ CONFIG_PRIMA_WLAN=y
 # CONFIG_PRIMA_WLAN_BTAMP is not set
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+# CONFIG_PRIMA_WLAN_11AC_HIGH_TP is not set
 # CONFIG_WLAN_FEATURE_11W is not set
 # CONFIG_QCOM_VOWIFI_11R is not set
 
